# python-gui-installer-example

./: .gitignore  BUILDING.md  CLAUDE.md  Makefile  README.md  build.py  pyproject.toml  requirements.txt  weather_app.py  weather_app.spec
.claude/: architecture-memory.md  settings.local.json
.claude/memory/: test-commands.md
.github/workflows/: build.yml
config/: __init__.py  settings.py
icons/: generate_icons.py  icon.icns
models/: __init__.py  errors.py  weather.py
services/: __init__.py  weather_service.py
tests/: __init__.py  test_models.py  test_weather_service.py
ui/: __init__.py  main_window.py
