[project]
name = "python-gui-installer-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyinstaller>=6.16.0",
    "pyqt6>=6.10.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pillow>=11.0.0",
    "pytest>=8.4.2",
]
