[project]
name = "python-gui-installer-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pyinstaller>=6.16.0",
    "pyqt6>=6.10.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pillow>=11.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=models",
    "--cov=services",
    "--cov=ui",
    "--cov-report=term-missing",
    "--cov-report=html",
]
